<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".View.Fragments.AccountDetailsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="70dp"
        android:layout_height="4dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/back_shape"
        android:backgroundTint="@color/topHeadingColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/account_details"
        android:textColor="@color/appColor"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="4dp"
                android:text="Account Type"
                android:textColor="#CCCCCC"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:inputType="text"
                android:minHeight="40sp"
                android:padding="5dp"
                android:text="@string/fackbook"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="4dp"
                android:text="@string/username_email"
                android:textColor="#CCCCCC"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edAccountUserName_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:inputType="textEmailAddress"
                android:minHeight="40sp"
                android:padding="5dp"
                android:text="1ashutosh@gmail.com"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:padding="4dp"
                android:text="Password"
                android:textColor="#CCCCCC"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edAccountPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/eye_off_svgrepo_com"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_bold"
                android:inputType="textPassword"
                android:minHeight="40sp"
                android:padding="5dp"
                android:text="*******"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>